--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "build-watch": "tsc --watch",
-    "start": "node dist/app.js",
+    "start": "nodemon dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/node": "^17.0.16",
     "@types/qs": "^6.9.7",
+    "nodemon": "^2.0.15",
     "tslint": "^6.1.3",
     "typescript": "^4.5.5"
   },
