--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gakubot",
   "version": "1.0.0",
-  "description": "",
+  "description": "telegram bot for english language learning",
   "main": "dist/app.js",
   "scripts": {
     "build": "tsc",
@@ -9,18 +9,22 @@
     "start": "nodemon dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "nekqy",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^17.0.16",
     "@types/qs": "^6.9.7",
+    "@types/uuid": "^8.3.4",
     "nodemon": "^2.0.15",
     "tslint": "^6.1.3",
     "typescript": "^4.5.5"
   },
   "dependencies": {
     "axios": "^0.25.0",
+    "dotenv": "^16.0.0",
+    "pexels": "^1.3.0",
     "qs": "^6.10.3",
+    "shutterstock-api": "^1.1.13",
     "telegraf": "^4.7.0",
     "typegram": "^3.8.0"
   }
